...


    val drawerItemList = listOf(

        DrawerItems(
            icon = R.drawable.ic_science,
            title = "Science",
            badgeCount = 0,
            hasBadge = false
        ),

        DrawerItems(icon = R.drawable.ic_sport,
            title = "Sport",
            badgeCount = 0,
            hasBadge = false),

        DrawerItems(
            icon = R.drawable.ic_bussiness,
            title = "Business",
            badgeCount = 0,
            hasBadge = false
        ),

        DrawerItems(
            icon = R.drawable.ic_health,
            title = "Health",
            badgeCount = 0,
            hasBadge = false
        ),
        DrawerItems(
            icon = R.drawable.ic_entertaiment,
            title = "Entertainment",
            badgeCount = 0,
            hasBadge = false
        ),

        DrawerItems(icon = R.drawable.cpu,
            title = "Technology",
            badgeCount = 0,
            hasBadge = false)


    )

...
