package com.example.mnewsapp.domain.utils

object TestTags {
    const val NewsyArticle = "newsy article"
    val HeadlineLazyColumnTestTag = "headline lazycolumn"
    val HeadlineProgressIndicator = "headline indicator"
    val HeadlineSnackBar = "headline snackbar"
    val DrawerBtn = "drawerBtn"
    val DrawerContainer = "drawer Container"
    val NewsyLogoIcon = "NewsyLogo"

    val Second = "Second Screen"

}